<resources>
    <string name="app_name">BPL 2019</string>
    <string name="time_table">সময়সূচী</string>
    <string name="team_intro">দল পরিচিতি</string>
    <string name="live_score">লাইভ স্কোর</string>
    <string name="live"> লাইভ খেলা </string>
    <string name="developer"> About Developer</string>

    <string name="m5a">০৫ জানু, শনিবার\nরংপুর রাইডার্স-চিটাগং ভাইকিংস\n সময়ঃ ১২.৩০</string>
    <string name="m5b">০৫ জানু, শনিবার	\nঢাকা ডায়নামাইটস-রাজশাহী কিংস	\n সময়ঃ ৫.২০</string>
    <string name="m6a">০৬ জানু, রোববার	\nকুমিল্লা ভিক্টোরিয়ান্স-সিলেট সিক্সার্স \n সময়ঃ	১২.৩০</string>
    <string name="m6b">০৬ জানু, রোববার	\nখুলনা টাইটান্স-রংপুর রাইডার্স	 \n সময়ঃ ৫.২০</string>
    <string name="m8a">০৮ জানু, মঙ্গলবার	\nঢাকা ডায়নামাইটস-খুলনা টাইটান্স	\n সময়ঃ ১২.৩০</string>
    <string name="m8b">০৮ জানু, মঙ্গলবার	\nকুমিল্লা ভিক্টোরিয়ান্স-রংপুর রাইডার্স	\n সময়ঃ ৫.২০</string>
    <string name="m9a">০৯ জানু, বুধবার	\nসিলেট সিক্সার্স-চিটাগাং ভাইকিংস	\n সময়ঃ ১২.৩০</string>
    <string name="m9b">০৯ জানু, বুধবার	\nখুলনা টাইটান্স-রাজশাহী কিংস	\n সময়ঃ ৫.৩০</string>
    <string name="m11a">১১ জানু, শুক্রবার	\nঢাকা ডায়নামাইটস-রংপুর রাইডার্স	\n সময়ঃ  ২.০০</string>
    <string name="m11b">১১ জানু, শুক্রবার	\nকুমিল্লা ভিক্টোরিয়ান্স-রাজশাহী কিংস \n সময়ঃ 	৭.০০</string>
    <string name="m12a">১২ জানু, শনিবার	\nচিটাগং ভাইকিংস-খুলনা টাইটান্স	\n সময়ঃ ১২.৩০</string>
    <string name="m12b">১২ জানু, শনিবার	\nঢাকা ডায়নামাইটস-সিলেট সিক্সার্স \n সময়ঃ 	৫.২০r</string>
    <string name="m13a">১৩ জানু, সোমবার	\nরংপুর রাইডার্স-রাজশাহী কিংস	\n সময়ঃ ১২.৩০</string>
    <string name="m13b">১৩ জানু, সোমবার	চ\nিটাগং ভাইকিংস-কুমিল্লা ভিক্টোরিয়ান্স	\n সময়ঃ ৫.৩০</string>
    <string name="m15a">১৫ জানু, মঙ্গলবার	\nখুলনা টাইটান্স-রাজশাহী কিংস	\n সময়ঃ ১২.৩০</string>
    <string name="m15b">১৫ জানু, মঙ্গলবার	সিলেট সিক্সার্স-কুমিল্লা ভিক্টোরিয়ান্স	\n সময়ঃ ৫.২০</string>
    <string name="m16a">১৬ জানু, বুধবার	\nঢাকা ডায়নামাইটস-রাজশাহী কিংস	\n সময়ঃ ১২.৩০</string>
    <string name="m16b">১৬ জানু, বুধবার	\nসিলেট সিক্সার্স-রংপুর রাইডার্স	\n সময়ঃ ৫.২০</string>
    <string name="m18a">১৮ জানু, শুক্রবার	\nসিলেট সিক্সার্স-ঢাকা ডায়নামাইটস	\n সময়ঃ ২.০০</string>
    <string name="m18b">১৮ জানু, শুক্রবার	\nখুলনা টাইটান্স-কুমিল্লা ভিক্টোরিয়ান্স  \n সময়ঃ	 ৭.০০</string>
    <string name="m19a">১৯ জানু, শনিবার	\nসিলেট সিক্সার্স-রংপুর রাইডার্স	\n সময়ঃ ১২.৩০</string>
    <string name="m19b">১৯ জানু, শনিবার	\nচিটাগং ভাইকিংস-খুলনা টাইটান্স	\n সময়ঃ ৫.২০</string>
    <string name="m21a">২১ জানু, সোমবার	\nকুমিল্লা ভিক্টোরিয়ান্স-রাজশাহী কিংস	\n সময়ঃ ১২.৩০</string>
    <string name="m21b">২১ জানু, সোমবার	\nঢাকা ডায়নামাইটস-চিটাগং ভাইকিংস	\n সময়ঃ ৫.২০</string>
    <string name="m22a">২২ জানু, মঙ্গলবার	\nখুলনা টাইটান্স-রংপুর রাইডার্স	\n সময়ঃ ১২.৩০</string>
    <string name="m22b">২২ জানু, মঙ্গলবার	\nঢাকা ডায়নামাইটস-কুমিল্লা ভিক্টোরিয়ান্স	\n সময়ঃ ৫.২০</string>
    <string name="m23a">২৩ জানু, বুধবার	\nচিটাগং ভাইকিংস-রাজশাহী কিংস	 \n সময়ঃ ১২.৩০</string>
    <string name="m23b">২৩ জানু, বুধবার	\nখুলনা টাইটান্স-সিলেট সিক্সার্স	\n সময়ঃ ৫.২০</string>
    <string name="m25a">২৫ জানু, শুক্রবার	\nসিলেট সিক্সার্স-রাজশাহী কিংস	\n সময়ঃ ২.০০</string>
    <string name="m25b">২৫ জানু, শুক্রবার	\nচিটাগং ভাইকিংস-রংপুর রাইডার্স	\n সময়ঃ ৭.০০</string>
    <string name="m26a">২৬ জানু, শনিবার	\nসিলেট সিক্সার্স-খুলনা টাইটান্স	\n সময়ঃ ১২.৩০</string>
    <string name="m26b">২৬ জানু, শনিবার	\nচিটাগং ভাইকিংস-রাজশাহী কিংস	 \n সময়ঃ ৫.২০</string>
    <string name="m28a">২৮ জানু, সোমবার	\nখুলনা টাইটান্স-কুমিল্লা ভিক্টোরিয়ান্স	 \n সময়ঃ ১২.৩০</string>
    <string name="m28b">২৮ জানু, সোমবার	\nঢাকা ডায়নামাইটস-রংপুর রাইডার্স	\n সময়ঃ ৫.২০</string>
    <string name="m29a">২৯ জানু, মঙ্গলবার	\nচিটাগং ভাইকিংস-কুমিল্লা ভিক্টোরিয়ান্স	\n সময়ঃ ১২.৩০</string>
    <string name="m29b">২৯ জানু, মঙ্গলবার	\nরংপুর রাইডার্স-রাজশাহী কিংস	\n সময়ঃ ৫.২০</string>
    <string name="m30a">৩০ জানু, বুধবার	\nচিটাগং ভাইকিংস-ঢাকা ডায়নামাইটস	\n সময়ঃ ১২.৩০</string>
    <string name="m30b">৩০ জানু, বুধবার	\nসিলেট সিক্সার্স-রাজশাহী কিংস	\n সময়ঃ ৫.২০</string>
    <string name="f1a">০১ ফেব্রু, শুক্রবার	\nঢাকা ডায়নামাইটস-কুমিল্লা ভিক্টোরিয়ান্স	\n সময়ঃ ২.০০</string>
    <string name="f1b">০১ ফেব্রু, শুক্রবার	\nচিটাগং ভাইকিংস-সিলেট সিক্সার্স	 \n সময়ঃ ৭.০০</string>
    <string name="f2a">০২ ফেব্রু, শনিবার	\nকুমিল্লা ভিক্টোরিয়ান্স-রংপুর রাইডার্স	\n সময়ঃ ১২.৩০</string>
    <string name="f2b">০২ ফেব্রু, শনিবার	\nঢাকা ডায়নামাইটস-খুলনা টাইটান্স	 \n সময়ঃ৫.২০</string>
    <string name="f4a">০৪ ফেব্রু, সোমবার	\nএলিমিনেটর (তৃতীয় ও চতুর্থ দল)	\n সময়ঃ ১২.৩০</string>
    <string name="f4b">০৪ ফেব্রু, সোমবার	\nকোয়ালিফায়ার-১ (প্রথম ও দ্বিতীয় দল)	 \n সময়ঃ ৫.২০</string>
    <string name="f6">০৬ ফেব্রু, বুধবার	\nকোয়ালিফায়ার-২ (কোয়া: ১ পরাজিত-এলিমিনেটর জয়ী)	 \n সময়ঃ৫.২০</string>

    <string name="f8">০৮ ফেব্রু, শুক্রবার	\nফাইনাল (কোয়ালিফায়ার ১ ও ২ জয়ী দল)	 \n সময়ঃ ৫.২০</string>

    <string name="f9">০৯ ফেব্রু, শনিবার	\nরিজার্ভ ডে (ফাইনাল) </string>

    <string name="f1st">প্রথম ধাপ, (০১-১৩ জানুয়ারি):</string>
    <string name="f2nd">দ্বিতীয় ধাপ, (১৫-১৯ জানুয়ারি):</string>
    <string name="f3rd">তৃতীয় ধাপ, (২১-২৩ জানুয়ারি) :</string>
    <string name="f4rth">চতুর্থ ধাপ, (২৫-৩০ জানুয়ারি):</string>
    <string name="f_last">শেষ ধাপ, (১-৮ ফেব্রুয়ারি):</string>

    <string name="v_sylhet">ভেন্যু- সিলেট </string>
    <string name="v_dhaka">ভেন্যু- ঢাকা</string>
    <string name="v_ctg">ভেন্যু- চট্টগ্রাম</string>

    <string name="team_rng">রংপুর রাইডার্স\nRangpur Riders</string>
    <string name="team_dha">ঢাকা ডাইনামাইটস\nDhaka Dynamites</string>
    <string name="team_ctg">চিটাগং ভাইকিংস\nChittagong Vikings</string>
    <string name="team_raj">রাজশাহী কিংস\nRajshahi Kings</string>
    <string name="team_syl">সিলেট সিক্সার্স\nSylhet Sixers</string>
    <string name="team_com">কুমিল্লা ভিক্টোরিয়ান্স\nComilla Victorians</string>
    <string name="team_khul">খুলনা টাইটানস\nKhulna Titans</string>

    <string name="owner">মালিক</string>

    <string name="mash">মাশরাফি বিন মুর্তজা </string>
    <string name="tamim">তামিম ইকবাল </string>
    <string name="mushi">মুশফিকুর রহমান </string>
    <string name="nasir">নাসির হোসেন </string>
    <string name="mominul">মুমিনুল হক </string>
    <string name="mahmudullah">মাহমুদউল্লাহ রিয়াদ </string>
    <string name="sakib">সাকিব আল হাসান</string>

    <string name="icon_player">আইকন খেলোয়ার</string>
    <string name="domestic">দেশী খেলোয়ার</string>
    <string name="foreigner">বিদেশী খেলোয়ার</string>

    <string name="sq_rng_f">ক্রিস গেইল, এবি ডি ভিলিয়ার্স, অ্যালেক্স হেলস, রবি বোপারা, রিলে রুশো, বেনি হাওয়েল, শেলডন কটরেল ও শন উইলিয়ামস।</string>
    <string name="sq_rng_d">মাশরাফি বিন মুর্তজা (অধিনায়ক), নাজমুল ইসলাম অপু, মোহাম্মদ মিথুন, শফিউল ইসলাম, সোহাগ গাজী, ফরহাদ রেজা, মেহেদি মারুফ, নাহিদুল ইসলাম, নাদিফ চৌধুরী, আবুল হোসেন রাজু ও ফারদিন হোসেন এনি।</string>

    <string name="sq_dha_d">সাকিব আল হাসান (অধিনায়ক), শুভাগত হোম, রনি তালুকদার, নুরুল হাসান সোহান, রুবেল হোসেন, কাজী অনিক, মিজানুর রহমান, আসিফ হাসান, শাহাদাত হোসেন রাজীব, নাইম শেখ ও মোহর শেখ অন্তর।</string>
    <string name="sq_dha_f">সুনিল নারাইন, রোভম্যান পাওয়েল, কাইরন পোলার্ড, আন্দ্রে রাসেল, হজরতউল্লাহ জাজাই, অ্যান্ড্র বার্জ ও ইয়ান বেল।</string>

    <string name="sq_syl_d">নাসির হোসেন, সাব্বির রহমান, লিটন কুমার দাস, আফিফ হোসেন ধ্রুব, তাসকিন আহমেদ, মোহাম্মদ আল-আমিন হোসেন, তৌহিদ হৃদয়, নাবিল সামাদ, এবাদত হোসেন, অলক কাপালি, জাকির আলি অনিক ও মেহেদি হাসান রানা।</string>
    <string name="sq_syl_f">ডেভিড ওয়ার্নার (অধিনায়ক), সোহেল তানভির, সন্দীপ লামিচানে, মোহাম্মদ ইরফান, গুলবাদিন নাইব, আন্দ্রে ফ্লেচার, ইমরান তাহির, নিকোলাস পুরান ও মোহাম্মদ নওয়াজ।</string>

    <string name="sq_com_d">তামিম ইকবাল (অধিনায়ক), ইমরুল কায়েস, মোহাম্মদ সাইফউদ্দিন, আবু হায়দার রনি, এনামুল হক বিজয়, মেহেদি হাসান, জিয়াউর রহমান, মোশরারফ হোসেন রুবেল, মোহাম্মদ শহীদ, শামসুর রহমান শুভ ও সঞ্জিত সাহা।</string>
    <string name="sq_com_f">শোয়েব মালিক, স্টিভেন স্মিথ, লিয়াম ডওসন, শহীদ আফ্রিদি, থিসারা পেরেরা, এভিন লুইস, ওয়াকার সালমা খাই ও আমের ইয়ামিন।</string>

    <string name="sq_khu_d">মাহমুদউল্লাহ রিয়াদ (অধিনায়ক), আরিফুল হক, নাজমুল হোসেন শান্ত, মোহাম্মদ আল-আমিন, তাইজুল ইসলাম, শরিফুল ইসলাম, জহুরুল ইসলাম অমি, শুভাশিষ রায়, জুনায়েদ সিদ্দিকী, তানভীর ইসলাম ও মাহিদুল ইসলাম অঙ্কন।</string>
    <string name="sq_khu_f">কার্লোস ব্র্যাথওয়েট, ডেভিড মালান, আলী খান, জহির খান, লাসিথ মালিঙ্গা, ইয়াসির শাহ, পল স্টার্লিং, ডেভিড ওয়াইজ ও ব্রেন্ডন টেইলর।</string>

    <string name="sq_ctg_d">মুশফিকুর রহিম (অধিনায়ক), সানজামুল ইসলাম, নাঈম হাসান, সৈয়দ খালেদ আহমেদ, আহমেদ আবু জায়েদ রাহি, মোসাদ্দেক হোসেন সৈকত, মোহাম্মদ আশরাফুল, রবিউল হক, ইয়াসির আলী চৌধুরী রাব্বি, নিহাদুজ্জামান ও সাদমান ইসলাম।</string>
    <string name="sq_ctg_f">সিকান্দার রাজা, লুক রনকি, মোহাম্মদ শাহজাদ, নজিবুল্লাহ জাদরান, রবি ফ্রাইলিংক, ক্যামেরন ডেলপোর্ট ও দাসুন শানাকা।</string>

    <string name="sq_raj_d">মেহেদী হাসান মিরাজ (অধিনায়ক), মুমিনুল হক, মোস্তাফিজুর রহমান, জাকির হাসান, আলাউদ্দিন বাবু, আরাফাত সানি, ফজলে রাব্বি, সৌম্য সরকার, মার্শাল আইয়ুব ও কামরুল ইসলাম রাব্বি।</string>
    <string name="sq_raj_f">ক্রিস্টিয়ান জাঙ্কার, রায়ান টেন ডেসকাট, সেকুগে প্রশন্ন, কায়েস আহমেদ, ইসুরু উদানা, লরি ইভেনস ও মোহাম্মদ হাফিজ।</string>

    <string name="owner_rng">আহমেদ আকবর সোবহান, বসুন্ধরা গ্রুপ</string>
    <string name="owner_dha">সালমান এফ রহমান, বেক্সিমকো গ্রুপ </string>
    <string name="owner_syl">অর্থমন্ত্রী আবুল মাল আব্দুল মুহিত, সিলেট স্পোর্টস লিমিটেড</string>
    <string name="owner_raj">পররাষ্ট্র প্রতিমন্ত্রী শাহরিয়ার আলম, রেনেসাঁ গ্রুপ</string>
    <string name="owner_ctg">আব্দুল ওয়াহেদ, ডিবিএল গ্রুপ</string>
    <string name="owner_com">পরিকল্পনা মন্ত্রী আ হ ম মুস্তাফা কামাল</string>
    <string name="owner_khu">আইনপ্রণেতা কাজী ইনাম আহমেদ, জেমকোন গ্রুপ</string>

    <string name="bdg">বদরগঞ্জ, রংপুর </string>
    <string name="coursse">Course Instructor</string>
    <string name="gp">01762940480, 01883749418</string>
    <string name="robi">01883749418</string>
    <string name="my_name">Zakaria Hossain Al-Hadi</string>
    <string name="skill0">JAVA Programmer</string>
    <string name="skill1"> Web and Android Developer</string>
    <string name="name">ICT Learning Point</string>
    <string name="motive">Learn HSC ICT With Hadi </string>
    <string name="featureHeading">বৈশিষ্ট্য সমুহঃ</string>
    <string name="Feature">- একাদশ-দ্বাদশ শ্রেণির ICT  ব্যাচ আকারে পড়ানো হয়।\n\n
    - প্রতিটি অধ্যায়ের মৌলিক বিষয়গুলো আগে করানো হয়।\n\n
    - অধ্যায় শেষে সৃজনশীল প্রাকটিস করানো হয়।\n\n
    - সবচেয়ে সহজ পদ্ধতিতে ডিজিটাল ডিভাইস অধ্যায় করানো হয়।\n\n
    - ওয়েব ডিজাইন, সি প্রোগ্রামিং, ডাটাবেজ অধ্যায় প্রাকটিক্যালি করানো হয়।\n\n
    - সি প্রোগ্রামিং অধ্যায় সর্বাধিক গুরুত্বের সাথে করানো হয়।\n\n
    </string>

    |
    <string name="todayMatch">আজকের খেলা </string>
    |
    <string name="vs"> VS  </string>
    <string name="dev"> Developed By Hadi  </string>

</resources>
