<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".rangpur">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:scaleType="fitXY"
        android:src="@drawable/rangpur"
        android:layout_width="match_parent"
        android:layout_height="150dp" />
    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#1B1464"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner_rng"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />
        <TextView
            android:textColor="#1B1464"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/icon_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:text="@string/mash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="8dp"
            android:textColor="#1B1464"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/domestic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/sq_rng_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="#1B1464"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/foreigner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/sq_rng_f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
</ScrollView>